# fork-okf-generator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.render  FUTURE.md  LICENSE  OKF_AGENTS.md  README.md  RELEASE.md  SKILL.md  TEST.md  TEST_REPORT.html  TEST_REPORT.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: agent-integration.md  ci-cd.md  cli-reference.md  development.md  index.html  index.md  installation.md  languages-and-manifests.md  performance.md  quick-start.md  video-script.md  viz.html
docs/Demo deck/: demo-short.tape
docs/comparison/: README.md
docs/development/: architecture.md  contributing.md
docs/docs-site/: 404.html  index.html  sitemap.xml  viz.html
docs/docs-site/Demo deck/TEST_REPORT/: index.html
docs/docs-site/Demo deck/video-script/: index.html
docs/docs-site/EU_AI_ACT_BRAIN_vs_VIZ_COMPARISON/: index.html
docs/docs-site/agent-integration/: index.html
docs/docs-site/changelog/: index.html
docs/docs-site/ci-cd/: index.html
docs/docs-site/cli-reference/: index.html
docs/docs-site/comparison/: index.html
docs/docs-site/comparison/okft-comparison/: index.html
docs/docs-site/comparison/okft-lint-report/: index.html
docs/docs-site/design-tokens/: index.html
docs/docs-site/development/: index.html
docs/docs-site/development/architecture/: index.html
docs/docs-site/development/contributing/: index.html
docs/docs-site/docs-site/: 404.html  index.html  sitemap.xml  viz.html
docs/docs-site/docs-site/Demo deck/: TEST_REPORT.html  demo.tape
docs/docs-site/docs-site/agent-integration/: index.html
docs/docs-site/docs-site/changelog/: index.html
docs/docs-site/docs-site/ci-cd/: index.html
docs/docs-site/docs-site/cli-reference/: index.html
docs/docs-site/docs-site/comparison/: index.html
docs/docs-site/docs-site/design-tokens/: index.html
docs/docs-site/docs-site/development/: index.html
docs/docs-site/docs-site/docs-site/: 404.html  business_page.html  llms.txt  robots.txt  sitemap.xml  viz.html
docs/docs-site/docs-site/examples/: okf-auto-bundle.yml
docs/docs-site/docs-site/future/: index.html
docs/docs-site/docs-site/getting-started/: index.html
docs/docs-site/docs-site/languages-and-manifests/: index.html
docs/docs-site/docs-site/python-api/: index.html
docs/docs-site/docs-site/search/: search_index.json
docs/docs-site/docs-site/troubleshooting/: index.html
docs/docs-site/docs-site/user-guide/: index.html
docs/docs-site/future/: index.html
docs/docs-site/getting-started/: index.html
docs/docs-site/getting-started/configuration/: index.html
docs/docs-site/getting-started/installation/: index.html
docs/docs-site/getting-started/quick-start/: index.html
docs/docs-site/installation/: index.html
docs/docs-site/languages-and-manifests/: index.html
docs/docs-site/python-api/: index.html
docs/docs-site/quick-start/: index.html
docs/docs-site/search/: search_index.json
docs/docs-site/troubleshooting/: index.html
docs/docs-site/user-guide/: index.html
docs/docs-site/user-guide/agent-integration/: index.html
docs/docs-site/user-guide/ask/: index.html
docs/docs-site/user-guide/bundle-format/: index.html
docs/docs-site/user-guide/ci-cd/: index.html
docs/docs-site/user-guide/cli-reference/: index.html
docs/docs-site/user-guide/domain-classification/: index.html
docs/docs-site/user-guide/enrichment/: index.html
docs/docs-site/user-guide/languages-and-manifests/: index.html
docs/docs-site/user-guide/mcp-server/: index.html
docs/docs-site/user-guide/plugins/: index.html
docs/docs-site/user-guide/python-api/: index.html
docs/docs-site/user-guide/visualization/: index.html
docs/okf_bundle/: SUMMARY.md  index.md  log.md
docs/okf_bundle/_dependencies/: index.md
docs/okf_bundle/_dependencies/cargo/: index.md  serde.md  serde_json.md  uuid.md
docs/okf_bundle/c/: index.md
docs/okf_bundle/cpp/: index.md
docs/okf_bundle/csharp/: index.md
docs/okf_bundle/dart/: index.md
docs/okf_bundle/go/: index.md
docs/okf_bundle/java/: index.md
docs/okf_bundle/javascript/: index.md
docs/okf_bundle/julia/: index.md
docs/okf_bundle/kotlin/: index.md
docs/okf_bundle/manifests/: index.md
docs/okf_bundle/php/: index.md
docs/okf_bundle/python/: index.md
docs/okf_bundle/ruby/: index.md
docs/okf_bundle/rust/: index.md
docs/okf_bundle/scala/: index.md
docs/okf_bundle/sql/: index.md
docs/okf_bundle/swift/: index.md
docs/okf_bundle/typescript/: index.md
docs/user-guide/: cli-reference.md  enrichment.md  index.md  plugins.md
okf/: __init__.py  _walk.py  ask.py  cli.py  config.py  dashboard.py  diff.py  generator.py  init.py  linker.py  lookup.py  manifest.py  manifest_scanner.py  mcp_server.py  pairs.py  plugin.py  root_detector.py  serve.py  update.py  visualize.py  watcher.py
okf/parsers/: __init__.py  base.py  c.py  cpp.py  csharp.py  dart.py  go.py  java.py  javascript.py  julia.py  kotlin.py  php.py  python.py  ruby.py  rust.py  scala.py  sql.py  swift.py
okf/templates/: viz-template.html
references/: OKF_vs_CBM_COMPARISON.md  opencode-integration.md
sample-plugins/okf-dotenv-plugin/: README.md  pyproject.toml
sample-plugins/okf-dotenv-plugin/okf_dotenv_plugin/: __init__.py
tests/: test.sh  test_diff.py  test_generator.py  test_lookup.py  test_manifest_scanner.py  test_mcp.py  test_realworld_fixtures.py  test_update.py  verify-release.sh
tests/fixtures/complex/: Cargo.toml  Dockerfile  Gemfile  Package.swift  build.gradle  composer.json  docker-compose.yml  go.mod  mix.exs  package.json  pom.xml  project.clj  pyproject.toml  requirements.txt
tests/fixtures/realworld/: README.md
tests/fixtures/realworld/python/complex/: api.py  config.py  pyproject.toml  requirements.txt
tests/fixtures/realworld/python/complex/services/: __init__.py  payment.py
tests/fixtures/sample_codebase/: connector.py  utils.py
(+983 files in other folders)
