[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "okf-generator"
version         = "0.1.41"
description     = "Generate OKF v0.1 knowledge bundles from codebases — Claude skill + OpenCode integration"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.11"
authors         = [{ name = "Umair Baig" }]
keywords        = [
    "okf", "open-knowledge-format", "codebase-indexing",
    "llm", "training-data", "opencode", "claude-skill",
    "tree-sitter", "code-knowledge", "ai-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "pyyaml>=6.0",
    "tqdm>=4.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "tree-sitter-sql>=0.3.0",
    "tree-sitter-swift>=0.7.0",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-php>=0.24.0",
    "tree-sitter-dart>=0.1.0",
    "tree-sitter-scala>=0.26.0",
    "tree-sitter-julia>=0.23.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",     # for LLM enrichment + training pairs
]
dev = [
    "pytest>=7.0",
    "hatch",
    "build",
    "twine",
    "ruff>=0.1",
    "pre-commit>=3.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mike>=2.1.0",
]
dashboard = [
    "fastapi>=0.139.0",
    "uvicorn>=0.50.0",
]
all = [
    "okf-generator[llm,dev]",
]

[project.scripts]
okf = "okf.cli:main"

[project.entry-points."okf.parsers"]
python     = "okf.parsers.python:PythonParser"
javascript = "okf.parsers.javascript:JSTSParser"
go         = "okf.parsers.go:GoParser"
java       = "okf.parsers.java:JavaParser"
rust       = "okf.parsers.rust:RustParser"
ruby       = "okf.parsers.ruby:RubyParser"
c          = "okf.parsers.c:CParser"
cpp        = "okf.parsers.cpp:CppParser"
csharp     = "okf.parsers.csharp:CSharpParser"
sql        = "okf.parsers.sql:SQLParser"
swift      = "okf.parsers.swift:SwiftParser"
kotlin     = "okf.parsers.kotlin:KotlinParser"
php        = "okf.parsers.php:PHPParser"
dart       = "okf.parsers.dart:DartParser"
scala      = "okf.parsers.scala:ScalaParser"
julia      = "okf.parsers.julia:JuliaParser"

[project.entry-points."okf.manifests"]
requirements-txt    = "okf.manifest_scanner:parse_requirements_txt"
pyproject-toml      = "okf.manifest_scanner:parse_pyproject_toml"
package-json        = "okf.manifest_scanner:parse_package_json"
cargo-toml          = "okf.manifest_scanner:parse_cargo_toml"
cargo-lock          = "okf.manifest_scanner:parse_cargo_lock"
yarn-lock           = "okf.manifest_scanner:parse_yarn_lock"
pnpm-lock           = "okf.manifest_scanner:parse_pnpm_lock"
go-mod              = "okf.manifest_scanner:parse_go_mod"
go-sum              = "okf.manifest_scanner:parse_go_sum"
poetry-lock         = "okf.manifest_scanner:parse_poetry_lock"
composer-json       = "okf.manifest_scanner:parse_composer_json"
pom-xml             = "okf.manifest_scanner:parse_pom_xml"
gemfile             = "okf.manifest_scanner:parse_gemfile"
build-gradle        = "okf.manifest_scanner:parse_build_gradle"
package-swift       = "okf.manifest_scanner:parse_package_swift"
project-clj         = "okf.manifest_scanner:parse_project_clj"
mix-exs             = "okf.manifest_scanner:parse_mix_exs"
dockerfile          = "okf.manifest_scanner:parse_dockerfile"
containerfile       = "okf.manifest_scanner:parse_dockerfile"
docker-compose-yml  = "okf.manifest_scanner:parse_docker_compose"

[project.urls]
Homepage      = "https://umairbaig8.github.io/okf-generator/"
Documentation = "https://umairbaig8.github.io/okf-generator/docs-site/"
Repository    = "https://github.com/UmairBaig8/okf-generator"
Issues        = "https://github.com/UmairBaig8/okf-generator/issues"
Changelog     = "https://github.com/UmairBaig8/okf-generator/releases"
Site          = "https://umairbaig8.github.io/okf-generator/"

[tool.hatch.build.targets.wheel]
packages = ["okf"]

[tool.hatch.build.targets.wheel.force-include]
"SKILL.md" = "okf/SKILL.md"

[tool.hatch.build.targets.sdist]
include = [
    "okf/",
    "tests/",
    "references/",
    "SKILL.md",
    "README.md",
    "LICENSE",
    "requirements.txt",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
